# go

./: .gitignore  BUILD  WORKSPACE
app/: BUILD  Gopkg.toml  WORKSPACE
app/company/: BUILD.bazel  Gopkg.toml  main.go
app/company/service/: BUILD.bazel  service.go
app/employee/: BUILD.bazel  main.go
app/employee/service/: BUILD.bazel  service.go
basic/dbstorage/: main.go
basic/dbstorage/get/: get.go
basic/dbstorage/set/: set.go
basic/dbstorage/storage/: storage.go
basic/proxy/: main.go
common/: BUILD.bazel
common/math/: math.go
common/util/company/: company.go
common/util/employee/: employee.go
