load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/deepakr199/go/app/company",
    visibility = ["//visibility:private"],
    deps = [
        "//app/company/service:go_default_library",
        "//app/vendor/github.com/golang/glog:go_default_library",
    ],
)

go_binary(
    name = "company",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
