load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/deepakr199/go/app/company",
    visibility = ["//visibility:private"],
    deps = [
        "//company/service:go_default_library",
        "@com_github_golang_glog//:go_default_library",
    ],
)

go_binary(
    name = "company",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
