load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["service.go"],
    importpath = "github.com/deepakr199/go/app/employee/service",
    visibility = ["//visibility:public"],
    deps = ["@com_github_deepakr199_go//common/util/employee:go_default_library"],
)
